# multiware

./: CMakeLists.txt  Doxyfile  README.md  ascii.h  cgihtml.cpp  cgihtml.h  cgishared.cpp  cgishared.h  environment.cpp  environment.h  forkproc.cpp  forkproc.h  global.cpp  global.h  html.cpp  html.h  local.cpp  local.h  location.cpp  location.h  look.cpp  look.h  main.cpp  metainfo.cpp  metainfo.h  mfw.cpp  mfw.h  mwcgi.cpp  mwcgi.h  shared.cpp  shared.h  shmem.h  std.h  termbind.cpp  termbind.h  vpa.cpp  vpa.h
